# nRF9160_test

./: README.md
E2_TEST/: CMakeLists.txt  Kconfig  prj.conf
E2_TEST/src/: main.c
E2_TEST/src/alarm/: alarm.c
E2_TEST/src/communicate/: communicate.c
E2_TEST/src/data_download/: data_download.c  data_download.h
E2_TEST/src/datetime/: datetime.c
E2_TEST/src/external_flash/: CMakeLists.txt  external_flash.c  external_flash.h
E2_TEST/src/font/: font.h
E2_TEST/src/fota/: fota_mqtt.c  fota_mqtt.h
E2_TEST/src/gps/: gps.c
E2_TEST/src/image/: img.h
E2_TEST/src/imu/: lsm6dso.c  sleep.c
E2_TEST/src/inner_flash/: inner_flash.c  inner_flash.h
E2_TEST/src/key/: key.c  key.h
E2_TEST/src/lcd/: LCD_LH096TIG11G_ST7735SV.h  LCD_ORCT012210N_ST7789V2.c  LCD_ORCZ010903C_GC9A01.c  LCD_R154101_ST7796S.c  LCD_VGM096064A6W01_SP5090.c  lcd.c  lcd.h
E2_TEST/src/nb/: nb.c  nb.h
E2_TEST/src/pmu/: max20353.c
E2_TEST/src/ppg/: max32674.c  max32674.h  max_sh_api.c  max_sh_api.h  max_sh_config_api.c  max_sh_config_api.h  max_sh_interface.c
E2_TEST/src/screen/: screen.c  screen.h
E2_TEST/src/settings/: settings.c  settings.h
E2_TEST/src/sos/: sos.c
E2_TEST/src/sync/: sync.c  sync.h
E2_TEST/src/temperature/: gxts04.c  gxts04.h  temp.c  temp.h
E2_TEST/src/tp/: CST816.c
E2_TEST/src/uart_ble/: uart_ble.c  uart_ble.h
E2_V3_IMU_TEST/src/imu/: CMakeLists.txt  algorithm.h  fall.h  lsm6dso.c  motion_aw.h  sleep.c  sleep.h
E2_V3_NCS2.3.0_PPG_LIB_TEST/src/ppg/: CMakeLists.txt  max32674.c  max_sh_fw_upgrade.c  max_sh_interface.c  ppg.h  ppg_interface_config.c
E2_V3_TEST/: CMakeLists.txt  Kconfig  nrf9160dk_nrf9160_ns.overlay  prj.conf
E2_V3_TEST/child_image/: mcuboot.overlay  spm.overlay
E2_V3_TEST/src/: main.c
E2_V3_TEST/src/animation/: animation.c  animation.h
E2_V3_TEST/src/barcode/: CMakeLists.txt
E2_V3_TEST/src/codetrans/: CharsetTable.c
E2_V3_TEST/src/communicate/: communicate.c
E2_V3_TEST/src/crc_check/: crc_check.c
E2_V3_TEST/src/data_download/: data_download.c
E2_V3_TEST/src/datetime/: datetime.c
E2_V3_TEST/src/external_flash/: dl_target_ppg.c  dl_target_ui.c  external_flash.c  external_flash.h
E2_V3_TEST/src/factory_test/: CMakeLists.txt  ft_ble.c  ft_ble.h  ft_current.c  ft_flash.c  ft_flash.h  ft_gpio.c  ft_gps.c  ft_gps.h  ft_imu.c  ft_imu.h  ft_lcd.c  ft_lcd.h  ft_main.c  ft_main.h  ft_network.c  ft_network.h  ft_pmu.c  ft_ppg.c  ft_ppg.h  ft_sim.c  ft_temp.c  ft_touch.c  ft_vibrate.c  ft_vibrate.h  ft_wifi.c  ft_wifi.h
E2_V3_TEST/src/fota/: fota_mqtt.c
E2_V3_TEST/src/gps/: gps.c
E2_V3_TEST/src/image/: img.h
E2_V3_TEST/src/imu/: algorithm.h  fall.c  fall.h  lsm6dso.c  lsm6dso.h  sleep.c  sleep.h
E2_V3_TEST/src/key/: key.c  key.h
E2_V3_TEST/src/lcd/: LCD_LH096TIG11G_ST7735SV.c  LCD_ORCT012210N_ST7789V2.c  LCD_R108101_GC9307.c  LCD_R154101_ST7796S.c  LCD_VGM068A4W01_SH1106G.c  LCD_VGM096064A6W01_SP5090.c  lcd.c
E2_V3_TEST/src/logger/: logger.c
E2_V3_TEST/src/nb/: nb.c  nb.h  transfer_cache.c  transfer_cache.h
E2_V3_TEST/src/pmu/: max20353.c  max20353.h  max20353_reg.c
E2_V3_TEST/src/ppg/: max32674.c  max32674.h  max_sh_interface.c
E2_V3_TEST/src/qrcode/: qr_encode.c  qr_encode.h
E2_V3_TEST/src/screen/: screen.c  screen.h
E2_V3_TEST/src/settings/: settings.c  settings.h
E2_V3_TEST/src/sos/: sos.c
E2_V3_TEST/src/temperature/: gxts04.c  temp.c  temp.h
E2_V3_TEST/src/tp/: CST816.c
E2_V3_TEST/src/uart_ble/: uart_ble.c
E2_V3_TEST/src/ucs2/: ucs2.h
E2_V3_TEST/src/wifi/: esp8266.c  esp8266.h
JPR_TEST/: CMakeLists.txt  JPR_TEST.IAB  JPR_TEST.IAD  JPR_TEST.IMB  JPR_TEST.IMD  JPR_TEST.PFI  JPR_TEST.PO  JPR_TEST.PR  JPR_TEST.PRI  JPR_TEST.PS  JPR_TEST.SearchResults  JPR_TEST.WK3  Kconfig  prj.conf
JPR_TEST/build_nrf9160_pca10090ns/: CMakeCache.txt  JPR_TEST.emProject  JPR_TEST.emSession  build.emProject  build.ninja  cmake_install.cmake  rules.ninja
JPR_TEST/build_nrf9160_pca10090ns/spm/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  rules.ninja  shared_vars.cmake
JPR_TEST/build_nrf9160_pca10090ns/zephyr/: .cmake.dotconfig.checksum  .config  cmake_install.cmake  isr_tables.c  linker.cmd.dep  linker_pass_final.cmd.dep  merged.hex  nrf9160_pca10090ns.dts.pre.d  zephyr.elf  zephyr.hex  zephyr.lst  zephyr.map  zephyr.stat  zephyr_prebuilt.elf  zephyr_prebuilt.map
JPR_TEST/src/: main.c
JPR_TEST/src/alarm/: alarm.c
JPR_TEST/src/communicate/: communicate.c
JPR_TEST/src/datetime/: datetime.c
test_modem_ca/: CMakeLists.txt  nrf9160_pca10090ns.overlay  prj.conf  test_modem_ca.IAB  test_modem_ca.IAD  test_modem_ca.IMB  test_modem_ca.IMD  test_modem_ca.PFI  test_modem_ca.PO  test_modem_ca.PR  test_modem_ca.PRI  test_modem_ca.PS  test_modem_ca.WK3
test_modem_ca/build_nrf9160_pca10090ns/: CMakeCache.txt  build.emProject  build.ninja  cmake_install.cmake  rules.ninja  test_modem_ca.emProject  test_modem_ca.emSession
test_modem_ca/src/: main.c
test_show_pic_font/: CMakeLists.txt  nrf9160_pca10090ns.overlay  prj.conf  test_show_pic_font.IAB  test_show_pic_font.IAD  test_show_pic_font.IMB  test_show_pic_font.IMD  test_show_pic_font.PFI  test_show_pic_font.PO  test_show_pic_font.PR  test_show_pic_font.PRI  test_show_pic_font.SearchResults  test_show_pic_font.WK3
test_show_pic_font/build_nrf9160_pca10090ns/: CMakeCache.txt  build.emProject  build.ninja  cmake_install.cmake  partitions.yml  pm.config  rules.ninja  test_show_pic_font.emProject  test_show_pic_font.emSession
test_show_pic_font/src/: main.c
uart_ble/: CMakeLists.txt  Kconfig  UART_BLE.IAD  UART_BLE.IMB  UART_BLE.IMD  UART_BLE.PFI  UART_BLE.PO  UART_BLE.PR  UART_BLE.PRI  UART_BLE.PS  UART_BLE.SearchResults  UART_BLE.WK3  nrf9160_pca10090_common.dts  nrf9160_pca10090ns.overlay  prj.conf  uart_ble.IAB  uart_ble.IAD  uart_ble.IMB  uart_ble.IMD  uart_ble.PFI  uart_ble.PO  uart_ble.PR  uart_ble.PS  uart_ble.WK3
uart_ble/build_nrf9160_pca10090ns/: CMakeCache.txt  build.emProject  build.ninja  cmake_install.cmake  partitions.yml  pm.config  rules.ninja  uart_ble.emProject  uart_ble.emSession
uart_ble/src/: main.c
(+5405 files in other folders)
